# xplorer_mini_sysid

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: kmpc_config.yaml  koopman_monitor_config.yaml  ocean_current_config.yaml  signal_config.yaml
config/controller/: dpid_gain.yaml
config/controller/dmdc/: ff_pi_kmpc_gain.yaml  ff_pi_lqt_gain.yaml
config/controller/dmdc/constrained/with_preview/: ffpi_intmpc_gain.yaml  ffpi_stdmpc_gain.yaml  pi_stdmpc_gain.yaml
config/controller/dmdc/constrained/without_preview/: ffpi_intmpc_gain.yaml  ffpi_stdmpc_gain.yaml
config/controller/dmdc/unconstrained/with_preview/: ffpi_stdmpc_gain.yaml  pi_stdmpc_gain.yaml
config/controller/edmdc/: ff_pi_kmpc_gain.yaml  ff_pi_lqt_gain.yaml
config/controller/edmdc/constrained/with_preview/: ffpi_intmpc_gain.yaml  (+2 more)
include/xplorer_mini_sysid/: control_ mux.hpp  control_mux.hpp  ocean_current_lib.hpp  signal_generate_lib.hpp
launch/: xplorer_mini_control_mux.launch.py  xplorer_mini_guidance_and_kmmpc.launch.py  xplorer_mini_km_monitor.launch.py  xplorer_mini_km_mpc.launch.py  xplorer_mini_reference.launch.py
notebook/: prediction.py  pso.py  report.py  simulation.py  summary.py
notebook/gain/: dpid_gain.yaml  ff_pi_pid_gain.yaml
src/: control_mux.cpp  ocean_current_lib.cpp  signal_generate_lib.cpp
xplorer_mini_sysid/: km_monitor.py  kmpc.py
xplorer_mini_sysid/kmc/controller/: __init__.py
xplorer_mini_sysid/kmc/controller/lqr/: integral.py  standard.py
xplorer_mini_sysid/kmc/controller/mpc/: __init__.py  delayed_input.py  standard.py  tube.py  velocity_form.py
xplorer_mini_sysid/kmc/core/: kmc.py
xplorer_mini_sysid/lib/controller/lqr/: __init__.py  base.py  standard.py
xplorer_mini_sysid/lib/controller/mpc/: __init__.py  base.py  incremental.py  standard.py  tube.py
xplorer_mini_sysid/lib/controller/pid/: __init__.py  pi.py  pid.py
xplorer_mini_sysid/lib/core/: kmc.py  model.py  params.py
xplorer_mini_sysid/lib/utils/: controller.py  kinematic.py  mlflow.py  virtual.py
xplorer_mini_sysid/mpc/: base.py
xplorer_mini_sysid/mpc/controller/: __init__.py  augment.py  lqr.py  standard.py
(+28 files in other folders)
